Update Problem set 2.tex

--- a/Problem set 2.tex
+++ b/Problem set 2.tex
@@ -315,8 +315,8 @@ e. Suppose H is equally happy eating red or green apples. The true cost of livin
 \textbf{Answer:} 
 
 \begin{itemize}
-\item Ex-ante is something happens before
-\item Ex-post is something happens after (when something is realized)
+\item Ex-ante is something happens before (EX: expected inflation)
+\item Ex-post is something happens after (when something is realized) (EX: realized inflation)
 \end{itemize}
 
 \textbf{Question 23:} List different costs of inflation.
@@ -345,25 +345,52 @@ Example: debtor and creditor enter into a long-term loan agreement. They both ex
 
 \textbf{Answer:} 
 
+A fiat money is a legal claim as it attains all its properties from the law. 
+
+Commodity money, on the other hand, is money that derives its value from a commodity of which it is made. \\
+
 \textbf{Question 27:} Describe the functions of money in an economy. Which of these functions do the following items (not) satisfy? (a) a credit card; (b) a painting; (c) a bus ticket.
 
 \textbf{Answer:} 
+
+Functions of money in the economy:
+\begin{itemize}
+\item a stock of assets that store values: credit card, bus ticket, painting
+\item a unit of account
+\item a medium of exchange: painting
+\end{itemize}
 
 \textbf{Question 28:} What are open-market operations, and how do they influence the money supply?
 
 \textbf{Answer:} 
 
+OMOs are the purchase and sale of non-monetary assets (mainly government bonds)from and to the commercial banks by the central bank to expand or contract the money in the banking system.
+
+To expand the money supply: central bank buys assets and pay them with ``newly'' printed money.
+
+To reduce the money supply: central bank sells assets and receive money (and ``destroy'' it). \\
+
 \textbf{Question 29:} What is the money market? What is the refinancing rate and how is it related to the money market?
 
 \textbf{Answer:} 
+
+Money market is where financial instruments with high liquidity and very short maturities are traded.
+
+Refinancing rate is the rate at which commercial banks borrow from the central bank. Normally, these borrowings are extremely short term (overnight), therefore, the transactions happen in the money market.
 
 \textbf{Question 30:} Write down the quantity equation of money and explain it.
 
 \textbf{Answer:} 
 
+Quantity equation of money: $M x v = P x Y$
+
+This equation describe how the amount of money M in an economy is related to the number of economic transactions (= the economy's nominal output $PY$). $v$ is the velocity of money (number of times an euro bill changes hands in a given time period). \\
+
 \textbf{Question 31:} Explain how (private) banks create money.
 
 \textbf{Answer:} 
+
+In a fractional reserve system, banks create money. Because commercial banks only keep a fraction of their deposits in reserve, and lend out the rest. The next bank receiving this amount of money will continue to keep only a fraction of deposits in reserve and lend out the rest. This process continues, and the total money supply created depends on the reserve ratio: Total money supply = $\frac{1}{rr}$ x Original Deposits. \\
 
 \textbf{Question 32:} What are the various ways in which the central bank can influence the money sup-ply?
 
