Update Problem set 2.tex

--- a/Problem set 2.tex
+++ b/Problem set 2.tex
@@ -392,25 +392,30 @@ This equation describe how the amount of money M in an economy is related to the
 
 In a fractional reserve system, banks create money. Because commercial banks only keep a fraction of their deposits in reserve, and lend out the rest. The next bank receiving this amount of money will continue to keep only a fraction of deposits in reserve and lend out the rest. This process continues, and the total money supply created depends on the reserve ratio: Total money supply = $\frac{1}{rr}$ x Original Deposits. \\
 
-\textbf{Question 32:} What are the various ways in which the central bank can influence the money sup-ply?
+\textbf{Question 32:} What are the various ways in which the central bank can influence the money supply?
 
 \textbf{Answer:} 
+\begin{itemize}
+\item Open market operations
+\item Change reserve requirements
+\item Change refinancing rate
+\end{itemize}
 
 \textbf{Question 33:} Explain how each of the following events changes the money supply (if at all).
 
 \textbf{Answer:} 
 
 \begin{itemize}
-\item a. The central bank buys bonds in an open market operation:
-\item b. The central bank increases the interest rate it pays banks holding reserves:
-\item c. Rumours about a computer virus attack on ATMs increase the amount of money people hold as currency rather than demand deposits:
-\item d. The ECB flies a helicopter over the Frankfurt pedestrian precinct and drops 100 euro bills:
+\item a. The central bank buys bonds in an open market operation: Increase money supply
+\item b. The central bank increases the interest rate it pays banks holding reserves: Decrease money supply
+\item c. Rumours about a computer virus attack on ATMs increase the amount of money people hold as currency rather than demand deposits: Decrease money supply
+\item d. The ECB flies a helicopter over the Frankfurt pedestrian precinct and drops 100 euro bills: Increase money supply
 \end{itemize}
 
 \textbf{Question 34:} Why might a banking crisis lead to a fall in money supply?
 
 \textbf{Answer:} 
-
+The change in money supply is determined by the (deposit) behavior of households and (lending) behavior of commercial banks. When financial crisis happens, households lose trust in the banking system so they want to hold money (at home) rather than depositing in the banks $\rightarrow$ Money supply falls. Business do not have profitable projects, so they do not need to borrow from banks. If banks cannot lend out money, they cannot create money $\rightarrow$ Money supply falls.
 
 \centering
 END
