Update Problem set 2.tex

--- a/Problem set 2.tex
+++ b/Problem set 2.tex
@@ -417,6 +417,133 @@ In a fractional reserve system, banks create money. Because commercial banks onl
 \textbf{Answer:} 
 The change in money supply is determined by the (deposit) behavior of households and (lending) behavior of commercial banks. When financial crisis happens, households lose trust in the banking system so they want to hold money (at home) rather than depositing in the banks $\rightarrow$ Money supply falls. Business do not have profitable projects, so they do not need to borrow from banks. If banks cannot lend out money, they cannot create money $\rightarrow$ Money supply falls.
 
+\section{Unemployment}
+\textbf{Question 35:} Assume that in the UK in 2010 of all adult people 28,980,000 were employed, 1,116,000 were unemployed and around 10,904,000 were not in the labour force. How big was the labour force? What was the labour force participation rate? What was the unemployment rate?
+
+\textbf{Answer:}
+
+\textbf{Question 36:} Name four different reasons why unemployment may occur and briefly describe the differences between the different kinds of unemployment.
+
+\textbf{Answer:}
+
+\textbf{Question 37:} Give three explanations for wages rigidities – why the real wage rate may remain above the level that equilibrates labour supply and labour demand.
+
+\textbf{Answer:}
+
+\textbf{Question 38:} What causes cyclical unemployment? 
+
+\textbf{Answer:}
+
+\textbf{Question 39:} What is the effect on wages, employment, and unemployment of a wave of immigra-tion: (a) in the absence of minimum wage legislation? (b) in the presence of (a binding) minimum wage legislation?
+
+\textbf{Answer:}
+
+\textbf{Question 40:} Suppose that a country experiences a reduction in productivity.
+
+\textbf{Answer:}
+
+\begin{itemize}
+\item a. What happens to the labour demand curve?
+\item b. What is the effect on wages, employment, and unemployment – if the labour market were always in equilibrium?
+\item c. How would this change in productivity affect the labour market if unions pre-vented real wages from falling?
+\end{itemize}
+
+\textbf{Question 41:} Consider an economy with the following Cobb-Douglas production function: $Y = K^{\frac{1}{3}}L^{\frac{2}{3}}$. The economy has 1,000 units of capital and a labour force of 1,000 workers.
+
+\textbf{Answer:}
+a. Derive the equation describing labour demand in this economy as a function of the real wage and the capital stock.
+b. Assume that the 1,000 units of capital and labour are supplied in-elastically. If the real wage is flexible and adjusts to equilibrate supply and demand on the labour market, what is the real wage? In that equilibrium, what are the employment, output and the total amount owned by workers?
+c. Now suppose the government passes a law to pay workers a real wage of 1 unit of output. How does this wage compare to the equilibrium wage?
+d. What do you think are the effects of this wage?
+
+\textbf{Question 42:} Find the optimal supply of work (= leisure demand) for a real wage of € 20/hr for someone who views consumption and leisure as perfect complements in a 10 to 1 ratio (i.e. she requires 1 hr of leisure for every € 10 of consumption). The maximum amount of leisure is 24 hr.
+
+\textbf{Answer:}
+
+\textbf{Question 43:} Find the optimal supply of work (= leisure demand) for a real wage of € 20/hr for someone who views consumption and leisure as perfect substitutes in a 10 to 1 ratio (i.e. she is willing to sacrifice 1 hr of leisure for € 10 of consumption). The maximum amount of leisure is 24 hr.
+
+\textbf{Answer:}
+
+\textbf{Question 44:} Individual labour supply may be a downward-sloping curve for many individuals, for others it maybe downward sloping but backward-bending at some real-wage level. Why can we still confidentially presume that aggregate labour supply is upward sloping?
+
+\textbf{Answer:}
+
+\textbf{Question 45:} Most countries levy taxes on labour. What is the effect of these taxes on labour supply and equilibrium wages? Assume that workers care for after tax wages only. State your assumptions carefully.
+
+\textbf{Answer:}
+
+\textbf{Question 46:} It is well known in Europe that the unemployment rate among well-educated is con-siderably lower than for those who left school early or without training. Why might this be the case? How might an “education offensive” help solve the unemployment problem, even if wages for the low-skilled are rigid?
+
+\textbf{Answer:}
+
+\textbf{Question 47:} Are the following workers more likely to experience short-term or long-term unem-ployment? Explain.
+
+\textbf{Answer:}
+\begin{itemize}
+\item a. A construction worker laid off because of bad weather.
+\item b. A manufacturing worker who loses her job at a plant in an isolated area.
+\item c. A bus industry worker laid off because of competition from the railway.
+\item d. An expert welder with little formal education who loses her job when the company installs automatic welding machinery.
+
+\end{itemize}
+
+\textbf{Question 48:} The residents of a certain hall of residence have collected the following data: people who live in the hall can be classified as either involved or uninvolved people, 10 per cent experience a break-up of their relationship every month. Among uninvolved people, 5 percent will enter into a relationship every month. What is the steady-state fraction of residents who are uninvolved?
+
+\textbf{Answer:}
+
+\textbf{Question 49:} Suppose the government passes legislation making it more difficult for firms to fire workers. If the legislation reduces the rate of job separation without affecting the rate of job finding, how would the natural rate of unemployment change?
+
+\textbf{Answer:}
+
+\textbf{Question 50:} In any city at any time, some of the stock of usable office space is vacant. This vacant office space is unemployed capital. How would you explain this phenomenon? Is it a social problem?
+
+\textbf{Answer:}
+
+\section{Exchange rate}
+
+\textbf{Question 51:} Define the terms nominal and real exchange rate. What is the difference between the two expressions?
+
+\textbf{Answer:}
+
+\textbf{Question 52:} What happens to the real exchange rate between two countries if the price level at home doubles, all other things equal (= ceteris paribus)? What if – ceteris paribus – the price of foreign goods doubles? What if – ceteris paribus – the nominal exchange rate doubles?
+
+\textbf{Answer:}
+
+\textbf{Question 53:} What is happening to the Swiss real exchange rate in each of the following situations? Explain.
+
+\textbf{Answer:}
+\begin{itemize}
+\item a. The Swiss nominal exchange rate is unchanged, but prices rise faster in Switzer-land than abroad.
+\item b. The Swiss nominal exchange rate is unchanged, but prices rise faster abroad than in Switzerland.
+\item c. The Swiss nominal exchange rate declines, and prices are unchanged in Switzer-land and abroad.
+\item d. The Swiss nominal exchange rate declines, and prices rise faster abroad than in Switzerland:
+\end{itemize}
+
+
+\textbf{Question 54:} Suppose a friend tells you that travelling in Mexico is much cheaper now than it was five years ago. ‘Five years ago,’ says your friend, ‘a UK pound bought 10 pesos; this year, a pound buys 15 pesos.’ Is your friend right or wrong? Given that total inflation over this period was about 25 per cent in the United Kingdom and 100 per cent in Mexico, has it become more or less expensive for UK residents to travel in Mexico? Write your answer using a concrete example - such as the price of a British pork pie versus the price of a Mexican taco - that will convince your friend.
+
+\textbf{Answer:}
+
+\textbf{Question 55:} List two goods for which the law of one price is likely to hold, and two goods for which it probably does not hold. Justify your choices.
+
+\textbf{Answer:}
+
+\textbf{Question 56:} A can of lemonade is priced at € 0.75 in Europe and 12 pesos in Mexico. What would the peso-euro exchange rate be if absolute purchasing power parity holds? If a mone-tary expansion caused all prices in Mexico to double, so that lemonade rose to 24 pe-sos, what would happen to the peso-euro exchange rate (if PPP holds)?
+
+\textbf{Answer:}
+
+\textbf{Question 57:} Assume that American rice sells for $1 a kilo, Japanese rice sells for 160 yen a kilo, and the nominal exchange rate is 80 yen per dollar.
+
+\textbf{Answer:}
+
+a. Explain how you could make a profit from this situation. What would be your profit per kilo of rice? If other people exploit the same opportunity, what would happen to the price of rice in Japan and the price of rice in the US?
+b. Suppose that rise is the only commodity in the world. What would happen to the real exchange rate between the United States and Japan?
+
+\textbf{Question 58:} How did Bela Balassa and (1928-1991) and Paul Samuelson (1915-2009, Nobel laureate from MIT) explain why wealthier countries are systematically more expensive than poorer ones?
+
+\textbf{Answer:}
+
+
 \centering
 END
 
