Update Problem set 1.tex

--- a/Problem set 1.tex
+++ b/Problem set 1.tex
@@ -1,20 +1,24 @@
-\documentclass[a4paper]{article}
+\documentclass[a4paper, 11pt]{article}
 
 %% Language and font encodings
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{libertine} 
 
 %% Sets page size and margins
-\usepackage[a4paper,top=3cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
+\usepackage[a4paper,top=2cm,bottom=2cm,left=3cm,right=3cm,marginparwidth=1.75cm]{geometry}
 
 %% Useful packages
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage{booktabs} 
+\usepackage{multirow}
 
 \title{Problem Set 1}
+\author{Huy Le Quang}
 
 \begin{document}
 \maketitle
