Update Problem set 2.tex

--- a/Problem set 2.tex
+++ b/Problem set 2.tex
@@ -421,6 +421,11 @@ The change in money supply is determined by the (deposit) behavior of households
 \textbf{Question 35:} Assume that in the UK in 2010 of all adult people 28,980,000 were employed, 1,116,000 were unemployed and around 10,904,000 were not in the labour force. How big was the labour force? What was the labour force participation rate? What was the unemployment rate?
 
 \textbf{Answer:}
+Labor force = $28,980,000 + 1,116,000 = 30,096,000$
+
+Labor force participation rate = $\frac{30,096,000}{30,096,000 + 10,904,000} = 73.4\%$
+
+Unemployment rate = $\frac{1,116,000}{30,096,000} = 3.71\%$ 
 
 \textbf{Question 36:} Name four different reasons why unemployment may occur and briefly describe the differences between the different kinds of unemployment.
 
