Update Problem set 2.tex

--- a/Problem set 2.tex
+++ b/Problem set 2.tex
@@ -434,30 +434,43 @@ Unemployment rate = $\frac{1,116,000}{30,096,000} = 3.71\%$
 \textbf{Question 37:} Give three explanations for wages rigidities – why the real wage rate may remain above the level that equilibrates labour supply and labour demand.
 
 \textbf{Answer:}
+\begin{itemize}
+\item Minimum wage law
+\item Trade union or collective bargaining
+\item Efficiency wage
+\end{itemize}
 
 \textbf{Question 38:} What causes cyclical unemployment? 
 
 \textbf{Answer:}
 
-\textbf{Question 39:} What is the effect on wages, employment, and unemployment of a wave of immigra-tion: (a) in the absence of minimum wage legislation? (b) in the presence of (a binding) minimum wage legislation?
+Cyclical unemployment is a short-run phenomenon that occurs if firms temporarily layoff their workers due to a decline in the production of goods and services during a recession (decline in aggregate demand). \\
+
+\textbf{Question 39:} What is the effect on wages, employment, and unemployment of a wave of immigration: (a) in the absence of minimum wage legislation? (b) in the presence of (a binding) minimum wage legislation?
 
 \textbf{Answer:}
+
+a. In the absence of minimum wage legislation, wages are flexibly changed even in the short run. Assume that immigrants are low-skilled and are perfectly substitutes to natives, a wave of immigration increase labor supply $\rightarrow$ wages decrease. Labor cost is now cheaper, if firms react by expanding production (scale effect), increasing labor demand, then employment may not decrease (or unemployment may not necessarily increase).
+
+b. In the presence of a binding minimum wage legislation, wages are sticky, firms cannot simply reduce wages to take advantage of the increasing labor supply. Therefore, we have excess labor supply, employment does not change, unemployment increases.
 
 \textbf{Question 40:} Suppose that a country experiences a reduction in productivity.
 
 \textbf{Answer:}
 
 \begin{itemize}
-\item a. What happens to the labour demand curve?
-\item b. What is the effect on wages, employment, and unemployment – if the labour market were always in equilibrium?
-\item c. How would this change in productivity affect the labour market if unions pre-vented real wages from falling?
+\item a. What happens to the labour demand curve? If a country experiences a reduction in productivity, marginal product of labor decreases, so labor demand curve shifts to the left (decreases)
+\item b. What is the effect on wages, employment, and unemployment – if the labour market were always in equilibrium? Wages decreases, employment decreases, unemployment increases.
+\item c. How would this change in productivity affect the labour market if unions prevented real wages from falling? If wages are not allowed to decrease, we will have excess labor supply, and unemployment still increases.
 \end{itemize}
 
 \textbf{Question 41:} Consider an economy with the following Cobb-Douglas production function: $Y = K^{\frac{1}{3}}L^{\frac{2}{3}}$. The economy has 1,000 units of capital and a labour force of 1,000 workers.
 
 \textbf{Answer:}
 a. Derive the equation describing labour demand in this economy as a function of the real wage and the capital stock.
-b. Assume that the 1,000 units of capital and labour are supplied in-elastically. If the real wage is flexible and adjusts to equilibrate supply and demand on the labour market, what is the real wage? In that equilibrium, what are the employment, output and the total amount owned by workers?
+
+
+b. Assume that the 1,000 units of capital and labour are supplied inelastically. If the real wage is flexible and adjusts to equilibrate supply and demand on the labour market, what is the real wage? In that equilibrium, what are the employment, output and the total amount owned by workers?
 c. Now suppose the government passes a law to pay workers a real wage of 1 unit of output. How does this wage compare to the equilibrium wage?
 d. What do you think are the effects of this wage?
 
