Update Problem set 3.tex

--- a/Problem set 3.tex
+++ b/Problem set 3.tex
@@ -139,28 +139,60 @@ $$I=1,000 −50r$$
 \textbf{Answer:} 
 
 a) In this economy, compute private saving, public saving, and national saving. \\
-b) Find the equilibrium interest rate.
-c) Now suppose that G rises to 1,250. Compute private saving, public saving, and national saving.
-d) Find the new equilibrium interest rate.
+$S^{P} = Y - C - T = 5000 - 250 - 0.75(5000 - 1000) - 1000 = 750$
+
+$S^{N} = T - G = 1000 - 1000 = 0$
+
+$S = S^{P} + S^{N} = 750
+
+b) Find the equilibrium interest rate. \\
+$Y = C + I + G$
+$5000 = 3250 + 1000 - 50r + 1000$
+$\rightarrow r = 5$
+
+c) Now suppose that G rises to 1,250. Compute private saving, public saving, and national saving.\\
+$S^{P} = 750$
+$S^{N} = -250$
+$S = 500$
+
+d) Find the new equilibrium interest rate.\\
+$Y = C + I + G$
+$5000 = 3250 + 1000 - 50r + 1250$
+$\rightarrow r = 10$ 
+\\
 
 \textbf{Question 12:} Suppose that the government increases taxes and government purchases by equal amounts. What happens to the interest rate and investment in response to this balanced-budget change? Does your answer depend on the marginal propensity to consume?
 
 \textbf{Answer:} 
 
+If the Government increase taxes and government purchases by the same amount, S^{N} will stay the same. However, increasing taxes will lower consumconomy: business investment and residential investment. And suppose that the government institutes an investment tax credit only for business investment.ption. As MPC < 1, S^{P} increases. Total saving S will increase, the Supply for loanable funds shifts to the right, lowering interest rates. MPC is an important variable to determine by how much S^{P} will increase. The higher the MPC, the lower the increase of $S^{P}$. \\
 
-\textbf{Question 13:} When the government subsidizes investment, such as with an investment tax credit, the subsidy often applies to only some types of investment. This question asks you to consider the effect of such a change. Suppose there are two types of investment in the economy: business investment and residential investment. And suppose that the government institutes an investment tax credit only for business investment.
+\textbf{Question 13:} When the government subsidizes investment, such as with an investment tax credit, the subsidy often applies to only some types of investment. This question asks you to consider the effect of such a change. Suppose there are two types of investment in the economy: business investment and residential investment.
+
 
 \textbf{Answer:}
 
+Investment tax credit: An amount that businesses are allowed by law to deduct from their taxes, reflecting an amount they reinvest in themselves.
+
 a) How does this policy affect the demand curve for business investment and the demand curve for residential investment?
-b) Draw the economy’s supply and demand for loanable funds. How does this policy af-fect the supply and demand for loanable funds? What happens to the equilibrium in-terest rate?
-c) Compare the old and the new equilibrium.
+
+The demand curve for business investment will shift to the right due to higher demand since it is now relatively cheaper to invest.
+
+The demand curve for residential investment stays the same. \\
+
+b) Draw the economy’s supply and demand for loanable funds. How does this policy affect the supply and demand for loanable funds? What happens to the equilibrium interest rate?
+The supply for loanable funds stays the same, the demand for loanable funds shift to the right, increasing interest rates \\
+
+c) Compare the old and the new equilibrium. 
+As the supply for loanable fund stays the same, only demand for loanable fund shifts right, $\rightarrow$ quantity of investment stays the same, but interest rate is higher. \\
+
 d) How does this policy affect the total quantity of investment? The quantity of business investment? The quantity of residential investment?
 
+This policy does not change the quantity of investment because it does not change the supply for loanable fund. The gain from investment tax credit will be offset by the lose from higher interest rate. \\
 
 \textbf{Question 14:} If consumption depended on the interest rate, how would that affect the conclusions reached in this chapter about the effects of fiscal policy?
 
-\textbf{Answer:}  
+\textbf{Answer:}  \\
 
 \section{Saving and Investment in a Small Open Economy}
 
