Update Problem set 3.tex

--- a/Problem set 3.tex
+++ b/Problem set 3.tex
@@ -169,7 +169,6 @@ If the Government increase taxes and government purchases by the same amount, S^
 
 \textbf{Question 13:} When the government subsidizes investment, such as with an investment tax credit, the subsidy often applies to only some types of investment. This question asks you to consider the effect of such a change. Suppose there are two types of investment in the economy: business investment and residential investment.
 
-
 \textbf{Answer:}
 
 Investment tax credit: An amount that businesses are allowed by law to deduct from their taxes, reflecting an amount they reinvest in themselves.
@@ -193,6 +192,19 @@ This policy does not change the quantity of investment because it does not chang
 \textbf{Question 14:} If consumption depended on the interest rate, how would that affect the conclusions reached in this chapter about the effects of fiscal policy?
 
 \textbf{Answer:}  \\
+
+In this chapter, we concluded that an increase in government expenditures reduces
+national saving and raises the interest rate; it therefore crowds out investment by the full
+amount of the increase in government expenditure. Similarly, a tax cut increases
+disposable income and hence consumption; this increase in consumption translates into a
+fall in national saving—again, it crowds out investment by the full amount of the increase
+in consumption.
+
+If consumption depends on the interest rate, then these conclusions about fiscal policy
+are modified somewhat. If consumption depends on the interest rate, then so does saving.
+The higher the interest rate, the greater the return to saving. Hence, it seems reasonable
+to think that an increase in the interest rate might increase saving and reduce
+consumption. \\
 
 \section{Saving and Investment in a Small Open Economy}
 
