Update Problem set 3.tex

--- a/Problem set 3.tex
+++ b/Problem set 3.tex
@@ -210,26 +210,36 @@ consumption. \\
 
 \textbf{Question 15:} If a small open economy cuts defence spending, what happens to saving, investment, the trade balance, and the interest rate?
 
-\textbf{Answer:}  
+\textbf{Answer:}  \\
+
+If a small open economy cuts defence spending, leaving other variables unchanged, $S^{G}$ increases, and national savings will increase. 
+However, the interest rate does not change, because it is fixed at the world interest rate level, Investment stays the same as before.
+The end result is that $S^{N} - I > 0$ $\rightarrow NX > 0$ $\rightarrow$ Net capital outflows > 0 (net lender to the world). \\
 
 \textbf{Question 16:} If a small open economy bans the import of Japanese DVD players, what happens to saving, investment, the trade balance, and the interest rate?
 
-\textbf{Answer:} 
-
+\textbf{Answer:} \\
+If a small open economy bans the import of Japanese DVD player, leaving other variables unchanged, NX increases, while interest rate $r^{*} does not change, Investment does not change. As $NX = S^{N} - I$ increases, and $\delta I = 0$, $S^{N}$ will increase. \\
 
 \textbf{Question 17:} What would happen to the trade balance of a small open economy when government purchases increase, such as during a war? Does you answer depend on whether it is a local war or a world war?
 
-\textbf{Answer:} 
+\textbf{Answer:} \\
+When Government purchases increase, the national saving will decrease. If it is a local war, the world interest rate does not change, Investment will stay the same, and Net export will decrease.
 
+If it is a world war, the interest rate likely changes. If interest rate increases, Investment will decrease. If the decrease in national saving equals the decrease in investment, there will be no change in net export. However, as we do not know the magnitude of the interest rate change and the direction of change, we cannot conclude anything in this case. \\
 
 \textbf{Question 18:} Suppose that some foreign countries begin to subsidize investment by instituting investment tax relief.
 
-\textbf{Answer:} 
+\textbf{Answer:} \\
+If some foreign countries begin to subsidize investment by instituting investment tax credit, 
 
-a) What happens to world investment demand as a function of the world interest rate?
-b) What happens to the world interest rate?
-c) What happens to investment in our small open economy?
-d) What happens to our trade balance?
+a) What happens to world investment demand as a function of the world interest rate? Investment demand will increase
+
+b) What happens to the world interest rate? If investment demand increase, the world interest rate will also increase.
+
+c) What happens to investment in our small open economy? As the world interest rate increases, the investment in the small open economy will decrease.
+
+d) What happens to our trade balance? If other variables in the economy stays the same and investment decrease $\rightarrow S^{N} - I$ will increase and Net export will increase. \\
 
 \section{The Determinants of the Real Exchange Rate}
 
