Update Problem set 3.tex

--- a/Problem set 3.tex
+++ b/Problem set 3.tex
@@ -143,7 +143,7 @@ $S^{P} = Y - C - T = 5000 - 250 - 0.75(5000 - 1000) - 1000 = 750$
 
 $S^{N} = T - G = 1000 - 1000 = 0$
 
-$S = S^{P} + S^{N} = 750
+$S = S^{P} + S^{N} = 750$
 
 b) Find the equilibrium interest rate. \\
 $Y = C + I + G$
@@ -165,7 +165,7 @@ $\rightarrow r = 10$
 
 \textbf{Answer:} 
 
-If the Government increase taxes and government purchases by the same amount, S^{N} will stay the same. However, increasing taxes will lower consumconomy: business investment and residential investment. And suppose that the government institutes an investment tax credit only for business investment.ption. As MPC < 1, S^{P} increases. Total saving S will increase, the Supply for loanable funds shifts to the right, lowering interest rates. MPC is an important variable to determine by how much S^{P} will increase. The higher the MPC, the lower the increase of $S^{P}$. \\
+If the Government increase taxes and government purchases by the same amount, $S^{N}$ will stay the same. However, increasing taxes will lower consumption. And suppose that the government institutes an investment tax credit only for business investment. As $MPC < 1$, $S^{P}$ increases. Total saving S will increase, the Supply for loanable funds shifts to the right, lowering interest rates. MPC is an important variable to determine by how much $S^{P}$ will increase. The higher the MPC, the lower the increase of $S^{P}$. \\
 
 \textbf{Question 13:} When the government subsidizes investment, such as with an investment tax credit, the subsidy often applies to only some types of investment. This question asks you to consider the effect of such a change. Suppose there are two types of investment in the economy: business investment and residential investment.
 
@@ -191,7 +191,7 @@ This policy does not change the quantity of investment because it does not chang
 
 \textbf{Question 14:} If consumption depended on the interest rate, how would that affect the conclusions reached in this chapter about the effects of fiscal policy?
 
-\textbf{Answer:}  \\
+\textbf{Answer:}  \\
 
 In this chapter, we concluded that an increase in government expenditures reduces
 national saving and raises the interest rate; it therefore crowds out investment by the full
@@ -219,7 +219,7 @@ The end result is that $S^{N} - I > 0$ $\rightarrow NX > 0$ $\rightarrow$ Net ca
 \textbf{Question 16:} If a small open economy bans the import of Japanese DVD players, what happens to saving, investment, the trade balance, and the interest rate?
 
 \textbf{Answer:} \\
-If a small open economy bans the import of Japanese DVD player, leaving other variables unchanged, NX increases, while interest rate $r^{*} does not change, Investment does not change. As $NX = S^{N} - I$ increases, and $\delta I = 0$, $S^{N}$ will increase. \\
+If a small open economy bans the import of Japanese DVD player, leaving other variables unchanged, NX increases, while interest rate $r^{*}$ does not change, Investment does not change. As $NX = S^{N} - I$ increases, and $\delta I = 0$, $S^{N}$ will increase. \\
 
 \textbf{Question 17:} What would happen to the trade balance of a small open economy when government purchases increase, such as during a war? Does you answer depend on whether it is a local war or a world war?
 
@@ -245,12 +245,26 @@ d) What happens to our trade balance? If other variables in the economy stays th
 
 \textbf{Question 19:} Use the model of the small open economy to predict what would happen to the trade balance, the real exchange rate, and the nominal exchange rate in response to each of the following events.
 
-\textbf{Answer:} 
+\textbf{Answer:} \\
 a) A fall in consumer confidence about the future induces consumers to spend less and save more.
+
+If consumers decide to spend less and save more, Saving will increase, and Net export will increase, the real exchange rate decrease. As NER depends both on RER and price level between two countries, and we do not have information about the change in price levels of two countries, we cannot conclude anything about the NER.
+ 
 b) A tax reform increases the incentive for businesses to build new factories.
+
+Investment increase, and Net export decreases. This leads to a decrease in RER.
+
 c) The introduction of a stylish line of Toyotas makes some consumers prefer foreign cars over domestic cars.
+
+Net export decreases, RER decreases.
+
 d) The central bank doubles the money supply.
+
+Inflation increases, Price level of the domestic country increases so RER increase. As RER increases, the price of domestic products are relatively more expensive than price of foreign products, NX will decrease.
+
 e) New regulations restricting the use of credit cards increase the demand for money.
+
+No change. \\
 
 \textbf{Question 20:} Consider an economy described by the following equations:
 $$Y = C + I + G + NX$$
@@ -265,17 +279,49 @@ $$r = r^{∗} = 5$$
 \textbf{Answer:} 
 
 a) In this economy, solve for national saving, investment, the trade balance, and the equilibrium exchange rate.
+$$S^{N} = S^{P} + S^{G}$$
+$$S^{N} = (Y-C-T) + (T-G)$$
+$$S^{N} = 5000 - [250 + 0.75(5000 - 1000)] - 1000 + (1000 - 1000)$$
+$$S^{N} = 750$$
+$$I = 1000 - 50*5 = 750$$
+$$NX = S^{N} - I = 500 - 500\epsilon = 0$$
+$$\rightarrow \epsilon = 1$$
 b) Suppose now that G rises to 1,250. Solve for national saving, investment, the trade balance, and the equilibrium exchange rate. Explain what you find.
+
+Similar to a, we find that: 
+$$S^{N} = 500$$
+$$S^{N} - I = NX = -250$$
+$$\rightarrow \epsilon = 1.5$$
+
+National saving decreases, (S-I) curve shifts to the left, $\rightarrow$ NX decreases, and RER increases.
+
 c) Now suppose that the world interest rate rises from 5 to 10 percent. (G is again 1,000.) Solve for national saving, investment, the trade balance, and the equilibrium exchange rate. Explain what you find.
+$$S^{N} =750$$
+$$I = 500$$
+$$NX = 250$$
+$$\rightarrow \epsilon = 0.5$$
+
+I decreases, (S-I) curve shifts to the right, $\rightarrow$ NX increases, and RER decreases. \\
+
 
 \textbf{Question 21:} What happens to the real exchange rate in exercises 15-18?
 
 \textbf{Answer:} 
 
+Q15: RER decreases
 
-\textbf{Question 22:} In 2005, Federal Reserve Governor Ben Bernanke said in a speech: “Over the past decade a combination of diverse forces has created a significant increase in the global supply of saving—a global saving glut—which helps to explain both the increase in the U.S. current ac-count deficit [a broad measure of the trade deficit] and the relatively low level of long-term real interest rates in the world today.” Is this statement consistent with the models you have learned? Explain.
+Q16: RER decreases
+
+Q17: RER increases
+
+Q18:  RER decreases
+
+
+\textbf{Question 22:} In 2005, Federal Reserve Governor Ben Bernanke said in a speech: “Over the past decade a combination of diverse forces has created a significant increase in the global supply of saving—a global saving glut—which helps to explain both the increase in the U.S. current account deficit [a broad measure of the trade deficit] and the relatively low level of long-term real interest rates in the world today.” Is this statement consistent with the models you have learned? Explain.
 
 \textbf{Answer:} 
+
+Global saving increases $\rightarrow$ i/r decreases $\rightarrow$ Investment demand in US increase $\rightarrow$ (S-I) curve shift left $\rightarrow$ NX decreases (increase in US CA deficit). \\
 
 \section{The Supply and Demand for Money}
 
@@ -283,16 +329,26 @@ c) Now suppose that the world interest rate rises from 5 to 10 percent. (G is ag
 
 \textbf{Answer:} 
 
+If we assume that the velocity of money is constant ($\bar{v}$), then the quantity equation becomes a theory of the effects of money supply:
+
+$$M\bar{v} = PY$$ \\
+
 
 \textbf{Question 24:} What is an inflation tax and who pays it?
 
 \textbf{Answer:} 
+
+Printing money to raise revenue is like imposing an inflation tax. Inflation causes a situation in which the money that the public holds in hand is less valuable as before. Different agents of the economy will be hurt (creditor, pensioners...) and others will gain (debtor). \\
 
 
 \textbf{Question 25:} Name two channels which determine the demand for money. Explain.
 
 \textbf{Answer:} 
 
+Using Fisher equation and Quantity theory of money, we have:
+$$(\frac{M}{P})^{D} = k[r + E(\pi)]Y$$
+
+So the money demand depends on k (inverse of velocity: how much money people would like to hold), nominal interest rate and income. \\
 
 
 \centering
